# Network-IDS

./: .gitignore  README.md  preprocess.py  pyproject.toml  test.ipynb
deployments/: fastapi-deployment.yaml  kafka-deployment.yaml  mlflow-deployment.yaml
docker/: docker-compose.yml
docker/k8s/: kustomization.yaml  namespace.yaml
src/inference/: kafka_consumer.py  setup_kibana.py
src/inference/app/: main.py  model_loader.py
src/mlops/: celery_worker.py  drift_detector.py  tasks.py
src/producer/: simulate_traffic.py
src/training/: autoencoder.py  processing.py  train_xgboost.py  xgboost.py
src/training/mlruns/0/: meta.yaml
src/training/mlruns/1/: meta.yaml
src/training/mlruns/1/08dad74f0656402ebb0d2bbd83a2b62e/: meta.yaml
src/training/mlruns/1/0e07bead92ed4bb48548c502cd46546a/: meta.yaml
src/training/mlruns/1/0e07bead92ed4bb48548c502cd46546a/metrics/: train_samples
src/training/mlruns/1/2dabe6457f3c4424af2da5226df30d23/: meta.yaml
src/training/mlruns/1/3807d752e50443cf9f5c91386ca33236/: meta.yaml
src/training/mlruns/1/3807d752e50443cf9f5c91386ca33236/metrics/: val_balanced_accuracy  val_macro_f1
src/training/mlruns/1/3fa8d2951b3b4860865a4d4b577e30e8/: meta.yaml
src/training/mlruns/1/631046ed375e427794839066b905a784/: meta.yaml
src/training/mlruns/1/a55f4a6e09664818809285a46976bf71/: meta.yaml
src/training/mlruns/1/b9c7aef8d4624ea2b96724ec7e3d2617/: meta.yaml
src/training/mlruns/1/d94edc2d973c4d94a6b8dddb5c09a1c0/: meta.yaml
src/training/mlruns/1/ff88ee765ed44ae8ac58a19534152171/: meta.yaml
src/utils/: feature_utils.py
(+16 files in other folders)
